--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
+<!--[if IE 8]>               <html class="no-js lt-ie9" lang="en" > <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <html>
-<head>
-<meta http-equiv="Content-type" content="text/html; charset=[% settings.charset %]" />
-<title>cravatar</title>
-</head>
-<body>
-[% content %]
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>cravatar</title>
+        <link rel="stylesheet" href="/css/foundation.css" />
+        <link rel="stylesheet" href="/css/custom.css"/>
+        <script type="text/js" src="/js/vendor/custom.modernizr.js"></script>
+        <link href='//fonts.googleapis.com/css?family=Merriweather+Sans:400,700,800,300'     rel='stylesheet' type='text/css'>
+    </head>
+    
+    <body>        
+        <div id="menu" class="contain-to-grid sticky">
+        <nav class="top-bar">
+        <ul class="title-area">
+            <li class="name">
+                <h1><a href="/"><img src="/images/csh.png"></img></a></h1>
+            </li>
+            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+            <li class="toggle-topbar"><a href="#"><span>Menu</span></a></li>
+        </ul>
+
+        <section class="top-bar-section">
+        <!-- Left Nav Section -->
+            <ul class="left">
+            </ul>
+
+        <!-- Right Nav Section -->
+            <ul class="right">
+            </ul>
+        </section>
+        </nav>
+        </div>
+
+        [% content %]
+        
+	 <script>
+		  document.write('<script src=' +
+		  ('__proto__' in {} ? '/js/vendor/zepto' : '/js/vendor/jquery') +
+		  '.js><\/script>')
+          $(document).foundation();
+	  </script>
+	  
+	  <script src="/js/foundation.min.js"></script>
+	  <script src="/js/foundation/foundation.dropdown.js"></script>
+	  <script src="/js/foundation/foundation.topbar.js"></script>
 </body>
 </html>
